fix: stretched image icons in buttons

--- a/src/client/styles/app.css
+++ b/src/client/styles/app.css
@@ -128,6 +128,10 @@ a.button-decorated {
       margin-right: 0.5ch;
     }
   }
+
+  & img:first-child {
+    object-fit: contain;
+  }
 }
 
 :where(.button) {
